@@ -1,3 +1,7 @@
+2002-12-16	fabian
+    * Got the addressbook popup button icon to work
+    * Updated strings files for Chinese
+    
 2002-12-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>
 
     * Removed addressbook toolbar item since the 
